fix for community on tablet

--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -402,6 +402,10 @@ input:-ms-input-placeholder {
     height: 228px;
   }
 
+  .info p {
+    font-size: 15px;
+  }
+
   .footer .mail-list input.email {
     width: 456px;
   }
